# llama.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PR.md  README.md  README.peg.md  convert.py  data1.json  ggml-clblast.cpp  ggml-clblast.h  ggml-opencl.cl  ggml-opencl.cpp  ggml.c  ggml.h  install.sh  llama.cpp  llama.h  test.cpp
common/: CMakeLists.txt  arg.cpp  chat-parser-xml-toolcall.cpp  chat-parser-xml-toolcall.h  chat-parser.cpp  chat-parser.h  chat-parsers-internal.h  chat-peg-parser.cpp  chat-peg-parser.h  chat-template-internal.h  chat.cpp  chat.h  common.cpp  common.h  download.cpp  download.h  grammar-parser.cpp  jinja.hpp  json-partial.cpp  json-partial.h  json-partial.hpp  json-schema-to-grammar.cpp  json-schema-to-grammar.h  mcp.cpp  mcp.hpp  minja.hpp  peg-parser.cpp  peg-parser.h  preset.cpp  regex-partial.cpp  regex-partial.h  regex.cpp  regex.h  sampling.cpp  sampling.h  tool-call.cpp  tool-call.h  train.cpp  train.h
common/chat-parsers/: apertus.cpp  apriel-1-5.cpp  command-r7b.cpp  deepseek-r1.cpp  deepseek-v3-1.cpp  firefunction-v2.cpp  function-gemma.cpp  functionary-v3-1-llama-3-1.cpp  functionary-v3-2.cpp  generic.cpp  glm-4-5.cpp  gpt-oss.cpp  granite.cpp  hermes-2-pro.cpp  kimi-k2.cpp  lfm2.cpp  llama-3-x.cpp  magistral.cpp  minimax-m2.cpp  ministral-3.cpp  mistral-nemo.cpp  nemotron-v2.cpp  nemotron-v3.cpp  qwen3-coder-xml.cpp  seed-oss.cpp  xiaomi-mimo.cpp
common/chat-syntax/: apertus.cpp  apriel-1-5.cpp  command-r7b.cpp  deepseek-r1.cpp  deepseek-v3-1.cpp  firefunction-v2.cpp  function-gemma.cpp  functionary-v3-1-llama-3-1.cpp  functionary-v3-2.cpp  generic.cpp  glm-4-5.cpp  gpt-oss.cpp  granite.cpp  hermes-2-pro.cpp  kimi-k2.cpp  lfm2.cpp  llama-3-x.cpp  magistral.cpp  minimax-m2.cpp  ministral-3.cpp  mistral-nemo.cpp  nemotron-v2.cpp  nemotron-v3.cpp  qwen3-coder-xml.cpp  seed-oss.cpp  xiaomi-mimo.cpp
common/minja/: minja.hpp
docs/: peg-testing-plan.md  pr-peg-migration.md  session-mmap.md  test-divergence-analysis.md  testing-chat-parsers.md
docs/development/: parsing.md
examples/: CMakeLists.txt  json-schema-to-grammar.py  json_schema_to_grammar.py
examples/agent/: README.md  __main__.py  agent.py  agent2.py  run.py
examples/baby-llama/: CMakeLists.txt  baby-llama.cpp
examples/batched/: CMakeLists.txt  batched.cpp
examples/batched-bench/: CMakeLists.txt  batched-bench.cpp
examples/beam-search/: CMakeLists.txt  beam-search.cpp
examples/benchmark/: CMakeLists.txt  benchmark-matmult.cpp
examples/cli/: CMakeLists.txt  README.md  cli.cpp  lcpp.cpp
examples/convert-llama2c-to-ggml/: CMakeLists.txt  convert-llama2c-to-ggml.cpp
examples/embedding/: CMakeLists.txt  embedding.cpp
examples/eval-callback/: CMakeLists.txt  eval-callback.cpp
examples/export-lora/: CMakeLists.txt  export-lora.cpp
examples/finetune/: CMakeLists.txt  finetune.cpp
examples/gbnf-validator/: CMakeLists.txt  gbnf-validator.cpp
examples/gguf/: CMakeLists.txt  gguf.cpp
examples/gguf-split/: CMakeLists.txt  gguf-split.cpp
examples/gritlm/: CMakeLists.txt  README.md  gritlm.cpp
examples/imatrix/: CMakeLists.txt  imatrix.cpp
examples/infill/: CMakeLists.txt  infill.cpp
examples/llama-bench/: CMakeLists.txt  llama-bench.cpp
examples/llava/: CMakeLists.txt  llava-cli.cpp
examples/lookahead/: CMakeLists.txt  lookahead.cpp
examples/lookup/: CMakeLists.txt  lookup-create.cpp  lookup-merge.cpp  lookup-stats.cpp  lookup.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/main-cmake-pkg/: CMakeLists.txt
examples/openai/: README.md  server.py
examples/parallel/: CMakeLists.txt  parallel.cpp
examples/passkey/: CMakeLists.txt  passkey.cpp
examples/perplexity/: CMakeLists.txt  perplexity.cpp
examples/quantize/: CMakeLists.txt  quantize.cpp
examples/quantize-stats/: CMakeLists.txt  quantize-stats.cpp
examples/retrieval/: CMakeLists.txt  retrieval.cpp
examples/rpc/: CMakeLists.txt
examples/save-load-state/: CMakeLists.txt
examples/server/: CMakeLists.txt  README.md  chat_handler.hpp  server.cpp  utils.hpp
examples/simple/: CMakeLists.txt
examples/speculative/: CMakeLists.txt  speculative.cpp
examples/sycl/: CMakeLists.txt
examples/tokenize/: CMakeLists.txt  tokenize.cpp
examples/train-text-from-scratch/: CMakeLists.txt  train-text-from-scratch.cpp
ggml/src/: CMakeLists.txt
gguf-py/examples/: read_field.py  (+1 more)
grammars/: README.md  from-json-schema.py
include/: llama.h
prompts/: chat_handlers.yaml  tool-calling.yaml
scripts/: build-llamafile.sh  fetch_server_test_models.py  get_chat_template.py  mcp_echo_server.py  plot_tool_call_tests.py  test-chat-parsers.sh  tool_bench.py  tool_bench.sh
src/: llama-context.cpp  llama-context.h  llama-grammar.cpp  llama-grammar.h  llama-mmap.cpp  llama-mmap.h  llama-sampling.cpp  llama.cpp
templates/: Hermes-2-Pro-Llama-3-8B.default.jinja  Hermes-2-Pro-Llama-3-8B.jinja  Hermes-2-Pro-Llama-3-8B.tool_use.jinja  Hermes-2-Pro-Mistral-7B.default.jinja  Hermes-2-Pro-Mistral-7B.jinja  Meta-Llama-3-8B-Instruct.jinja  Meta-Llama-3.1-8B-Instruct.jinja  Qwen2-VL-7B-Instruct.jinja  functionary-medium-v3.2.jinja  functionary-small-v3.2.jinja  gemma-2-2b-it.jinja
tests/: .gitignore  CMakeLists.txt  get-jinja-goldens.py  run-jinja.py  test-chat-peg-parser.cpp  test-chat-template.cpp  test-chat.cpp  test-chat.h  test-grammar-integration.cpp  test-grammar-parser.cpp  test-jinja.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-llama-grammar.cpp  test-mcp.cpp  test-minja.cpp  test-regex-partial.cpp  test-regex.cpp  test-tool-call.cpp  update_jinja_goldens.py
tools/: CMakeLists.txt
tools/mtmd-video-cli/: CMakeLists.txt  mtmd-video-cli.cpp
tools/vlib-video/: CMakeLists.txt  vlib_video.h  vlib_video_encoder.cpp  vlib_video_encoder.h  vlib_video_frame_filter.cpp  vlib_video_frame_filter.h  vlib_video_session.cpp  vlib_video_session.h  vlib_video_tool_parser.cpp  vlib_video_tool_parser.h
tools/vlib-video/fixtures/: tool_calls.jsonl
tools/vlib-video/tests/: CMakeLists.txt  test_mrope.cpp  test_pair_packing.cpp  test_pixel_diff_filter.cpp  test_tool_parser.cpp
(+166 files in other folders)
